<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map"
              tools:context=".MapsActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment" tools:layout_editor_absoluteX="28dp"
              map:layout_constraintTop_toTopOf="parent" tools:ignore="MissingConstraints"/>
    <Button
            android:text="@string/tituloSatelital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn2" android:layout_marginTop="8dp"
            map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" map:layout_constraintHorizontal_bias="0.0"
            map:layout_constraintVertical_bias="0.017"/>
    <Button
            android:text="@string/tituloTerrestre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1" android:layout_marginTop="8dp"
            map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" map:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintHorizontal_bias="0.353" map:layout_constraintVertical_bias="0.017"/>
    <Button
            android:text="@string/tituloHibrido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn3" android:layout_marginTop="8dp"
            map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" map:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintHorizontal_bias="0.667" map:layout_constraintVertical_bias="0.017"/>
    <Button
            android:text="@string/tituloNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn4" android:layout_marginTop="8dp"
            map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" map:layout_constraintHorizontal_bias="1.0"
            map:layout_constraintVertical_bias="0.017"/>
    <Button
            android:text="@string/tiutlo_alerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_alerta" android:layout_marginBottom="7dp"
            map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" map:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="7dp"/>

</android.support.constraint.ConstraintLayout>